# libsiedler2

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  INSTALL  Jenkinsfile  README.md  Readme.md  appveyor.yml  codecov.yml
.github/workflows/: release.yml  unit-tests.yml
.reuse/: dep5
cmake/Modules/: FindClangFormat.cmake
codelite/: libsiedler2.project
examples/: CMakeLists.txt  README.md  pal5.act.license
examples/chTransparentIdx/: CMakeLists.txt  chTransparentIdx.cpp
examples/lstpacker/: CMakeLists.txt  lstpacker.cpp  pack.cpp  pack.h  unpack.cpp  unpack.h  util.h
examples/outline/: CMakeLists.txt  outline.cpp
examples/test/: CMakeLists.txt  ColorOutput.h  LoadPalette.h  cmpFiles.cpp  cmpFiles.h  config.h  libSiedler2Test.cpp  testArchiv.cpp  testBmp.cpp  testBob.cpp  testColors.cpp  testDatIdx.cpp  testFont.cpp  testIni.cpp  testLBM.cpp  testMap.cpp  testPalette.cpp  testSound.cpp  testText.cpp
examples/test/testFiles/: bmpRLE.lst  bmpRaw.lst  bmpShadow.lst  map.wld  pal.bbm  test.ini  test.lbm  testFonts.LST  testXMIDI.xmi  txtAsLst.lst
include/libsiedler2/: Archiv.h  ArchivItem.h  ArchivItem_Bitmap.h  ArchivItem_BitmapBase.h  ArchivItem_Bitmap_Player.h  ArchivItem_Bitmap_RLE.h  ArchivItem_Bitmap_Raw.h  ArchivItem_Bitmap_Shadow.h  ArchivItem_Bob.h  ArchivItem_Font.h  ArchivItem_Ini.h  ArchivItem_Map.h  ArchivItem_Map_Header.h  ArchivItem_Palette.h  ArchivItem_PaletteAnimation.h  ArchivItem_Raw.h  ArchivItem_Sound.h  ArchivItem_Sound_Midi.h  ArchivItem_Sound_Other.h  ArchivItem_Sound_Wave.h  ArchivItem_Sound_XMidi.h  ArchivItem_Text.h  BmpHeader.h  ColorARGB.h  ColorBGRA.h  ColorRGB.h  CopyPixelBuffer.h  ErrorCodes.h  FileEntry.h  FileError.h  GammaTable.h  GetFormat.h  IAllocator.h  ICloneable.h  ImgDir.h  MIDI_Header.h  MIDI_Track.h  OpenMemoryStream.h  PixelBuffer.h  PixelBufferARGB.h  (+15 more)
meta/ci/: build.sh
src/: Archiv.cpp  Archiv.h  ArchivInfo.cpp  ArchivInfo.h  ArchivItem.cpp  ArchivItem.h  ArchivItem_Bitmap.cpp  ArchivItem_Bitmap.h  ArchivItem_BitmapBase.cpp  ArchivItem_BitmapBase.h  ArchivItem_Bitmap_Player.cpp  ArchivItem_Bitmap_Player.h  ArchivItem_Bitmap_RLE.cpp  ArchivItem_Bitmap_RLE.h  ArchivItem_Bitmap_Raw.cpp  ArchivItem_Bitmap_Raw.h  ArchivItem_Bitmap_Shadow.cpp  ArchivItem_Bitmap_Shadow.h  ArchivItem_Bob.cpp  ArchivItem_Bob.h  ArchivItem_Font.cpp  ArchivItem_Font.h  ArchivItem_Ini.cpp  ArchivItem_Ini.h  ArchivItem_Map.cpp  ArchivItem_Map.h  ArchivItem_Map_Header.cpp  ArchivItem_Map_Header.h  ArchivItem_Palette.cpp  ArchivItem_Palette.h  ArchivItem_PaletteAnimation.cpp  ArchivItem_Raw.cpp  ArchivItem_Raw.h  ArchivItem_Sound.cpp  ArchivItem_Sound.h  ArchivItem_Sound_Midi.cpp  ArchivItem_Sound_Midi.h  ArchivItem_Sound_Other.cpp  ArchivItem_Sound_Other.h  ArchivItem_Sound_Wave.cpp  (+76 more)
test/: outline.cpp  pal5.act
test/lstpacker/: CMakeLists.txt  lstpacker.cpp  lstpacker.sln  lstpacker.vcproj  lstpacker.vcxproj  lstpacker.vcxproj.filters  pack.cpp  unpack.cpp  util.h
test/outline/: CMakeLists.txt  outline.cpp  outline.sln  outline.vcxproj  outline.vcxproj.filters
tests/: CMakeLists.txt  ColorOutput.h  LoadPalette.h  cmpFiles.cpp  cmpFiles.h  config.h.cmake  libSiedler2Test.cpp  testArchiv.cpp  testBmp.cpp  testBob.cpp  testClone.cpp  testColors.cpp  testDatIdx.cpp  testFolder.cpp  testFont.cpp  testIni.cpp  testLBM.cpp  testLoadMapping.cpp  testMap.cpp  testPalette.cpp  testSound.cpp  testText.cpp
tests/testFiles/: bmpPlayer.lst  faultyMap.wld  map.SWD  map.wld  test.ini  test.lbm  txtAsLst.lst
tools/ci/: build.sh  setupCCache.sh  setupCompiler.sh
tools/travis-ci/: build.sh  installBoost.sh
win32/: libsiedler2.def
win32/vs2008/: libsiedler2.sln  libsiedler2.vcproj
win32/vs2010/: libsiedler2.vcxproj  libsiedler2.vcxproj.filters
win32/vs2012/: libsiedler2.vcxproj  libsiedler2.vcxproj.filters
