include(AddMacros)

add_testcase(NAME libsiedler2 LIBS siedler2)

file(COPY ${RTTR_PAL5_PATH} DESTINATION "${CMAKE_BINARY_DIR}")
install(FILES ${RTTR_PAL5_PATH} DESTINATION .)

set(RTTR_TESTFILES_PATH "${CMAKE_CURRENT_SOURCE_DIR}/testFiles")
file(COPY ${RTTR_TESTFILES_PATH} DESTINATION "${CMAKE_BINARY_DIR}")
install(DIRECTORY ${RTTR_TESTFILES_PATH} DESTINATION .)

if(ClangFormat_FOUND)
    add_clangFormat_files(${TEST_SOURCES})
endif()
